[tool.poetry]
name = "python-zatobox"
version = "0.1.0"
description = ""
authors = ["woutervanoverberghe <wouter.vanoverberghe@vanutech.be>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
zeroconf = "^0.147.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
